--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["superclient"]
+	"cSpell.words": ["CAQFO", "Hpau", "Iiwicm", "Nzkx", "superclient", "Vjgm", "Xphb", "Ymhu", "ZSIs"]
 }
