--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@material-table/core": "^6.1.15",
     "@mui/material": "^5.13.1",
+    "@mui/x-date-pickers": "^6.5.0",
+    "@mui/x-date-pickers-pro": "^6.5.0",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.22.0",
