--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@material-table/core": "^6.1.15",
     "@mui/material": "^5.13.1",
+    "@mui/x-data-grid": "^6.5.0",
+    "@mui/x-data-grid-generator": "^6.5.0",
     "@mui/x-date-pickers": "^6.5.0",
     "@mui/x-date-pickers-pro": "^6.5.0",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
