--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["clickaway", "nextjs", "xlight", "xxlight"]
+  "cSpell.words": ["clickaway", "nextjs", "tailwindcss", "xlight", "xxlight"]
 }
