--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "@mui/x-data-grid-generator": "^6.5.0",
     "@mui/x-date-pickers": "^6.5.0",
     "@mui/x-date-pickers-pro": "^6.5.0",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
-    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.0",
+    "@supabase/auth-helpers-react": "^0.4.0",
     "@supabase/supabase-js": "^2.22.0",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "^20.1.4",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.7",
-    "eslint": "8.40.0",
+    "eslint": "^8.41.0",
     "eslint-config-next": "13.4.2",
     "jotai": "^2.1.0",
     "jotai-devtools": "^0.5.3",
-    "next": "13.4.2",
+    "next": "^13.4.3",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "encoding": "^0.1.13"
