updated notification system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["clickaway", "nextjs", "tailwindcss", "xlight", "xxlight"]
+  "cSpell.words": [
+    "clickaway",
+    "nextjs",
+    "notistack",
+    "tailwindcss",
+    "xlight",
+    "xxlight"
+  ]
 }
