--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jotai": "^2.1.0",
     "jotai-devtools": "^0.5.3",
     "next": "^13.4.3",
+    "notistack": "^3.0.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
