--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
     "dayjs": "^1.11.7",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.2",
@@ -33,8 +34,10 @@
     "notistack": "^3.0.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "^5.0.4"
   },
