--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest "
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -43,8 +43,11 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.0",
+    "@types/jest": "^29.5.2",
     "encoding": "^0.1.13",
+    "jest": "^29.6.1",
     "ts-jest": "^29.1.1"
   }
 }
