--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "^13.0.0",
     "jotai": "^2.1.0",
     "jotai-devtools": "^0.5.3",
+    "modern-normalize": "^2.0.0",
     "next": "^13.4.3",
     "notistack": "^3.0.1",
     "postcss": "8.4.24",
