updates to code base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,9 @@
     "notistack",
     "tailwindcss",
     "timestamptz",
+    "ukbhnbmumzaorpsnhjoa",
     "xlight",
+    "XVCJ",
     "xxlight"
-  ],
-  "deno.enable": true
+  ]
 }
