--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "edge": "supabase functions deploy deleteUser --project-ref ukbhnbmumzaorpsnhjoa",
     "test": "jest "
   },
   "dependencies": {
