--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.0",
     "@supabase/auth-helpers-react": "^0.4.0",
     "@supabase/supabase-js": "^2.22.0",
+    "@tanstack/react-query": "^5.17.0",
     "@types/node": "^20.1.4",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
