--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint",
-    "edge": "supabase functions deploy deleteUser --project-ref ukbhnbmumzaorpsnhjoa"
+    "edge": "supabase functions deploy deleteUser --project-ref ukbhnbmumzaorpsnhjoa",
+    "test": "jest -w=1 --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -33,7 +34,7 @@
     "jotai": "^2.1.0",
     "jotai-devtools": "^0.7.0",
     "modern-normalize": "^2.0.0",
-    "next": "^13.4.3",
+    "next": "^14.0.4",
     "notistack": "^3.0.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
@@ -46,7 +47,12 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "encoding": "^0.1.13"
+    "babel-jest": "^29.7.0",
+    "encoding": "^0.1.13",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
