--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "supabase-nextjs",
   "version": "0.1.0",
+  "module": "esm",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "edge": "supabase functions deploy deleteUser --project-ref ukbhnbmumzaorpsnhjoa",
-    "test": "jest -w=1 --coverage"
+    "test": "jest -w=1 --coverage",
+    "import": "ts-node tests/import.test.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -35,6 +37,7 @@
     "jotai-devtools": "^0.7.0",
     "modern-normalize": "^2.0.0",
     "next": "^14.0.4",
+    "node-fetch": "^3.3.2",
     "notistack": "^3.0.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
@@ -44,6 +47,7 @@
     "sass": "^1.62.1",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
