--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "babel-jest": "^29.7.0",
+    "better-docs": "^2.7.3",
     "encoding": "^0.1.13",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0"
