--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "write-excel-file": "^1.4.29"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.7",
