--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "edge": "supabase functions deploy deleteUser --project-ref ukbhnbmumzaorpsnhjoa",
-    "test": "jest -w=1 --coverage",
+    "test": "jest",
     "import": "ts-node tests/import.test.ts"
   },
   "dependencies": {
@@ -56,7 +56,6 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "babel-jest": "^29.7.0",
-    "better-docs": "^2.7.3",
     "encoding": "^0.1.13",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0"
