--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@tanstack/react-query-devtools": "^5.28.6",
     "babel-jest": "^29.7.0",
     "encoding": "^0.1.13",
     "jest": "^29.7.0",
